[gd_scene load_steps=2 format=2]

[ext_resource path="res://BrushStroke/ImageStroke.gd" type="Script" id=1]

[node name="ImageStroke" type="Sprite"]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
